# PlatformerGame

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  run.sh
Applications/: CMakeLists.txt
Applications/QtApp/: CMakeLists.txt  QtApp.cpp  QtApp.h  QtScene.cpp  QtScene.h
Applications/QtApp/config/: editor.json
Applications/QtApp/resources/shaders/: fragment.glsl
Applications/QtAppTest/: CMakeLists.txt  ConfigManager.hpp  EscapeEventFilter.cpp  EscapeEventFilter.h  QtApp.cpp  QtApp.h  VSCodiumManager.cpp  VSCodiumManager.h  WebWindow.cpp  WebWindow.h  main.cpp
Example/: CMakeLists.txt
Example/03_SpaceExplorer/: App.cpp  App.h  CMakeLists.txt  Debugging.cpp  Debugging.h  GameUI.cpp  GameUI.h  Scene.cpp  Scene.h  Ship.cpp  Ship.h  SpaceExplorerUtils.h  Sprite.cpp  Sprite.h  Stats.h  TargetSelector.cpp  TargetSelector.h
Example/03_SpaceExplorer/resources/shaders/: procedural_stars.fs  spaceship.fs  spaceship.vs  target_selector.fs
Example/JumpingPlatformer/: App.cpp  Platform.h  Scene.h
Example/SokobanGame/: CMakeLists.txt
Example/SokobanGame/components/entity/: CMakeLists.txt  Cube.h  README.md
Framework/: CMakeLists.txt  pch.h
Framework/Core/: CMakeLists.txt  EntryPoint.cpp  EntryPoint.h  GLFWApplication.cpp  GLFWApplication.h  Input.cpp  Input.h  (+3 more)
Framework/ECS/: BaseScene.cpp  BaseScene.h  CMakeLists.txt  Component.cpp  Component.h  ECS_Systems.cpp  ECS_Systems.h  Entity.cpp  Entity.h  Shape.cpp  Sprite.cpp  Sprite.h
Framework/Gameplay/: CMakeLists.txt  PlayerController.cpp  PlayerController.h
Framework/ResourceManagement/: CMakeLists.txt  JSONParser.cpp  JSONParser.h  ShaderManager.cpp  ShaderManager.h
Framework/ResourceManagement/resources/shaders/: ECS_sprite.fs  ECS_sprite.vs
Framework/Util/: CMakeLists.txt  FW_random.h  Files.cpp  Files.h  Log.h  Util.cpp  Util.h
Framework/Util/Math/: Math.cpp  Math.h
Framework/Util/test/: CMakeLists.txt  test_Files.cpp
PhysicsDemo/: CMakeLists.txt  ExitStatus.cpp  ExitStatus.h  Filesystem.h  ImGuiWidgets.hpp  PhysicsApp.cpp  PhysicsApp.h  PhysicsScene.cpp  PhysicsScene.h  Selections.cpp  Selections.h
PhysicsDemo/AssetSystem/: Asset.cpp  Asset.h  AssetSystem.cpp  AssetSystem.h  CMakeLists.txt  Image.cpp  Image.h  README.md
PhysicsDemo/Widgets/: AppWidget.cpp  AppWidget.h  CustomControls.h  ImGuiWidgetState.h  ImGuiWidgets.hpp  Layouts.h  MenuBarWidget.hpp  PropertiesPanel.hpp  SettingsWidget.hpp  WidgetStyle.h
PhysicsDemo/components/: CMakeLists.txt
PhysicsDemo/components/entity/: CMakeLists.txt  Floor.cpp  Floor.h  WorldGrid.cpp  WorldGrid.h
PhysicsDemo/config/: editor.json
PhysicsDemo/resources/config/: editor.ini
PhysicsDemo/resources/shaders/: worldGridFrag.glsl  worldGridVertex.glsl
PhysicsDemo/templates/imgui/: default.ini  viewport_only.ini
SokobanGame/: SokobanApplication.cpp
docs/: readmap.md
framework/: CMakeLists.txt  pch.h
framework/Core/: CMakeLists.txt  Core.h  EntryPoint.cpp  EntryPoint.h  GLFWApplication.cpp  GLFWApplication.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Memory.h  Timer.cpp  Timer.h  assertions.cpp  assertions.h
framework/ECS/: BaseScene.cpp  BaseScene.h  CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  PrimitiveShape.cpp  PrimitiveShape.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sprite.cpp  Sprite.h
framework/GLFWApplication/: CMakeLists.txt  GLFWApplication.cpp  GLFWApplication.h  Input.h  Timer.cpp  assertions.cpp  assertions.h
framework/Gameplay/: PlayerController.cpp  PlayerController.h
framework/GeometricTools/: CMakeLists.txt  GeometricTools.h
framework/Physics/: BoundingBoxes.cpp  CMakeLists.txt  Force.cpp  Force.h  ParticleSystem.cpp  ParticleSystem.h  Physics.cpp  Physics.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsServer.cpp  PhysicsServer.h  Solver.cpp  Solver.h
framework/Physics/resources/shaders/: particleFrag.glsl
framework/Rendering/: Buffer.cpp  Buffer.h  BufferLayout.h  CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommands.cpp  RenderCommands.h  Shader.cpp  Shader.h  ShaderDataTypes.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  Viewport.h
framework/Rendering/Buffers/: BufferLayout.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
framework/Rendering/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
framework/Rendering/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h  Skybox.cpp  Skybox.h  SpotLight.cpp  SpotLight.h
framework/ResourceManagement/: CMakeLists.txt  Files.cpp  Files.h  JSONParser.cpp  JSONParser.h  Model.cpp  Model.h
framework/Util/: CMakeLists.txt  FW_Math.cpp  FW_Math.h  Log.h  Memory.h  Types.h  Util.h
framework/include/: Framework.h
samples/: CMakeLists.txt
samples/JumpingPlatformer/: App.cpp  App.h  CMakeLists.txt  JumpingPlatformerApp.cpp  JumpingPlatformerApp.h  JumpingPlatformerScene.cpp  JumpingPlatformerScene.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h
samples/JumpingPlatformer/resources/shaders/: spriteFragmentShader.fs  spriteShader.fs  spriteShader.vs
src/: CMakeLists.txt  SokobanApplication.cpp  SokobanApplication.h  main.cpp
src/components/: CMakeLists.txt
src/components/entity/: CMakeLists.txt  Cube.h  Entity.cpp  Entity.h  Floor.cpp  Floor.h  Material.cpp  Material.h  Physics.cpp  Physics.h
src/components/map/: CMakeLists.txt  Map.cpp  Map.h
src/components/util/: CMakeLists.txt  gameMath.h
src/resources/maps/: level.map  test.map
src/resources/shaders/: fragment.glsl  screenShaderFrag.glsl  screenShaderVertex.glsl  shaderSingleColor.glsl  skyboxFrag.glsl  skyboxVertex.glsl  vertex.glsl
(+55 files in other folders)
